<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HayDelegacion</string>
    <string name="menu_settings">Próximamente más</string>
    <string name="SliceImage">Slice Image</string>
    <string name="programa">Programa:</string>
    <string name="programa1">- Mejora la atención a los alumnos, para ello mantendremos la delegación siempre abierta.</string>
    <string name="programa2">- Rediseñar el calendario de examenes junto al alumnado.</string>
    <string name="programa3">- Hacer que se cumpla la evaluación alternativa.</string>
    <string name="programa4">- Transparencia absoluta en los presupuestos.</string>
    <string name="programa5">- Conseguir una mejora del servicio de cafeteria.</string>
    <string name="programa6">- Mayor uso de los medios propios de delegación para informar al alumnado.</string>
    <string name="programa7">- Mejora de las condiciones y los horarios de las salas de estudios.</string>
    <string name="programaindice1">Sobre la representación en la Escuela:</string>
    <string name="programa8">- Hacer que se cumpla la evaluación alternativa.</string>
    <string name="programa9">- Fomentar las relaciones con las asociaciones (EUROAVIA, ESTIEM...).</string>
    <string name="programa10">- Asistencia a TODOS los plenos del CADUS y daremos cobertura sobre ellos.</string>
    <string name="programa11">- Conseguir una mayor representación en el CADUS, que los votos de los alumnos de la ESI valgan lo mismo que los del resto de la US</string>
    <string name="programa12">- Hacer un mejor uso de la pagina web de la delegación y de los medios online para informar a los alumnos</string>
    <string name="programa13">- Nos oponemos a las subidas de tasas y al recorte de las becas y promoveremos la defensa de la educación pública.</string>
    <string name="programa14">- Fomentar la realización de eventos de caracter extra-académico en la escuela</string>
    <string name="programaIndice2">Sobre la representación fuera de la escuela:</string>
    <string name="RedesSociales">Redes Sociales</string>
    <string name="RSTwitter">Twitter: @esiHD</string>
    <string name="RSFacebook">Facebook: \n Hay Delegación ESI - ESI HD</string>
    <string name="Contacta">Contacta:</string>
    <string name="email">Email</string>
    <string name="ContactaForm">Envianos un email. Escribe aquí.</string>
    <string name="ContactaEnviar">Enviar</string>
    <string name="QuienesSomosTitulo">¿Quienes somos?</string>
    <string name="QuienesSomosTexto">Somos un grupo de estudiantes cansados de ser ignorados y tratados como borregos por la actual delegación de alumnos. Es por eso que creemos que la Escuela de Ingenieros merece a unos representantes a la altura de sus estudiantes, nosotros somos personas que dedicamos todo nuestro tiempo a luchar por un sueño aunque parezca imposible y hemos decidido cambiar la delegación de la ESI por completo. \n Nuestras carreras son complicadas y es por ello que la colaboración de la delegación de alumnos para resolver los problemas de los alumnos es algo muy importante y creemos que se necesitan personas dispuestas a poner todo su empeño en mejorar su funcionamiento para que les sea útil a los alumnos.</string>
    <string name="tuenti">Tuenti:</string>
    <string name="load_tweets">Cargar tweets</string>
    <string name="imageprofiletwitter">Imagen de perfil de Twitter</string>
    <string name="updatetime">"Última actualización: "</string>
    <string name="updatebutton">Boton de Actualizar</string>
    <string name="update">Actualizar</string>
    <string name="OurTwitterSection">Últimos twits:</string>

</resources>