<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFlipper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    tools:context=".Main" >

    <FrameLayout
        android:id="@+id/page1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:clickable="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="82dp"
            android:layout_height="120dp"
            android:layout_gravity="right"
            android:contentDescription="@string/SliceImage"
            android:src="@drawable/slice" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/page2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundapp" >

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/programa"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/programaindice1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa2" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa3" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa4" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa5" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa6" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa7" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa8" />

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa9" />

            <TextView
                android:id="@+id/TextView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa14" />

            <TextView
                android:id="@+id/textView99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/programaIndice2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa10" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa11" />

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa12" />

            <TextView
                android:id="@+id/TextView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="30dp"
                android:text="@string/programa13" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/page3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundapp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/QuienesSomosTitulo"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="408dp"
                android:padding="35dp"
                android:text="@string/QuienesSomosTexto" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/page4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backgroundapp"
        android:clickable="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/RedesSociales"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView144"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/RSTwitter"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/totwitter"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/RSTwitter"
            android:src="@drawable/twitter" />

        <TextView
            android:id="@+id/textView145"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/RSFacebook"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/toface"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/RSFacebook"
            android:src="@drawable/fb" />

        <TextView
            android:id="@+id/textView146"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/tuenti"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/toTuenti"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/RSFacebook"
            android:src="@drawable/ic_tuenti" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/page5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundapp"
        android:clickable="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/OurTwitterSection"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lastupdatetwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/updatetime"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/updatebuttontwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:contentDescription="@string/updatebutton"
                    android:src="@drawable/update" />

            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/TweetList"
            android:layout_width="fill_parent"
            android:layout_height="447dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/page6"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backgroundapp"
        android:clickable="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="1000dp"
            android:layout_height="wrap_content"
            android:text="@string/Contacta"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/mailbody"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:hint="@string/ContactaForm"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:paddingTop="15dp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ContactaEnviar" />
    </LinearLayout>

</ViewFlipper>